calc functions but still misaligned

--- a/public/index.html
+++ b/public/index.html
@@ -36,6 +36,6 @@
                 <a id="clearall">AC</a>
             </div>
         </div>
-        <script src="/script.js"></script>
+        <script src="script.js"></script>
     </body>
 </html>
